# agenda

./: Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  settings.toml
agenda/services/: __init__.py
agenda/utils/: logger.py
