[tool.poetry]
name = "agenda"
version = "0.1.0"
description = ""
authors = ["Romulo Sousa <carmosousa20@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.11"
sqlalchemy = "^1.4.41"
fastapi = "^0.85.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
